Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Asraf-uddin-ahmed.GitHub.io : Git Web Page of User">
+    <meta name="description" content="Asraf Uddin Ahmed : Git Web Page of User">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Asraf-uddin-ahmed.GitHub.io</title>
+    <title>Asraf Uddin Ahmed</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/Asraf-Uddin-Ahmed">View on GitHub</a>
 
-          <h1 id="project_title">Asraf-uddin-ahmed.GitHub.io</h1>
+          <h1 id="project_title">Asraf Uddin Ahmed</h1>
           <h2 id="project_tagline">Git Web Page of User</h2>
 
         </header>
